--- a/Round/round-outline.css
+++ b/Round/round-outline.css
@@ -30,3 +30,39 @@
     border: 2px solid rgba(255, 255, 255, 0.24);
   }
 }
+
+.focusring_FocusRing_1IZrQ {
+  outline: none;
+  border: 2px solid rgba(255, 255, 255, 0.6);
+  border-radius: 22px;
+  margin: -2px;
+  animation: focusring_growOutline_Z3LxS 0.4s ease,
+    focusring_fadeOutline_2hZu3 0.4s ease,
+    focusring_blinker_3wFMM 1.2s ease-in-out 0.4s 20;
+}
+
+@keyframes focusring_growOutline_Z3LxS {
+  0% {
+    border: 12px solid;
+    margin: -12px;
+    border-radius: 30px;
+  }
+  100% {
+    border: 2px solid;
+    margin: -2px;
+    border-radius: 22px;
+  }
+}
+@keyframes focusring_fadeOutline_2hZu3 {
+  0% {
+    border-color: rgba(255, 255, 255, 0);
+  }
+  100% {
+    border-color: rgba(255, 255, 255, 0.6);
+  }
+}
+@keyframes focusring_blinker_3wFMM {
+  50% {
+    border: 2px solid rgba(255, 255, 255, 0.24);
+  }
+}
