--- a/Round/shared.css
+++ b/Round/shared.css
@@ -20,9 +20,19 @@
 }
 
 /* What's new */
-.gamepadhomewhatsnew_EventPreviewContainer_1ltOY {
-  border-radius: 20px;
-  overflow: hidden;
+.gamepadhomewhatsnew_Darkener_1n_1X {
+  border-radius: 20px 20px 0px 0px;
+}
+.gamepadhomewhatsnew_EventImage_116GS {
+  border-radius: 20px 20px 0px 0px;
+}
+.gamepadhomewhatsnew_EventPreviewOuterWrapper_10b1V:hover
+  .gamepadhomewhatsnew_EventImage_116GS,
+.gpfocus .gamepadhomewhatsnew_EventImage_116GS {
+  border-radius: 30px 30px 0px 0px;
+}
+.gamepadhomewhatsnew_EventInfo_6TGe7 {
+  border-radius: 0px 0px 20px 20px;
 }
 .recentlycompleted_RecentlyCompletedItem_3OC7i {
   border-radius: 20px;
