Fix Round played for first time

--- a/Round/shared.css
+++ b/Round/shared.css
@@ -80,6 +80,10 @@
   border-radius: 20px;
   overflow: hidden;
 }
+.appactivityday_PlayedGameFirstTime_3fdEo
+  > .appactivityday_EventHeadline_QCKBq {
+  border-radius: 20px;
+}
 .BasicUI .appactivityday_Event_UVeN0 .appactivityday_EventBody_NEMXh {
   border-radius: 0px 0px 20px 20px;
 }
