Various Round missing and bug fixes

--- a/Round/round-outline.css
+++ b/Round/round-outline.css
@@ -71,6 +71,11 @@
 .BasicUI
   .appdetailssection_AppDetailsSectionContainer_31ptF.appdetailssection_RightColumnSection_3KfxI
   > .focusring_FocusRingRoot_3PH_X
+  > .focusring_FocusRing_1IZrQ,
+.appactivityday_NoCommentSupport_2CB_R
+  > .appactivityday_EventBody_NEMXh
+  > .Panel
+  > .focusring_FocusRingRoot_3PH_X
   > .focusring_FocusRing_1IZrQ {
   border: none;
   outline: 2px solid rgba(255, 255, 255, 0.6);
