Add Galactic dependencies

--- a/Galactic/colors.css
+++ b/Galactic/colors.css
@@ -1,5 +1,7 @@
+/* Taken from Obsidian */
+
 :root {
-  --obsidian-main-color: #000;
+  --obsidian-main-color: #111;
   --obsidian-button-glow: #ffffff90;
 }
 
