--- a/Obsidian/shared.css
+++ b/Obsidian/shared.css
@@ -216,3 +216,7 @@ OTHER
 .gamepaddialog_ModalPosition_30VHl > .gamepaddialog_GamepadDialogContent_3joNk {
   background: var(--obsidian-main-color) !important;
 }
+/* Lock screen */
+.lockscreen_Container_3rFFU {
+  background: var(--obsidian-main-color) !important;
+}
