OBSIDIAN - Lockscreen Background

--- a/Obsidian/shared.css
+++ b/Obsidian/shared.css
@@ -23,6 +23,9 @@ HOME PAGE
 .gamepadhome_TabbedContent_cE1Sa {
   background: var(--obsidian-main-color) !important;
 }
+.lockscreen_Container_3rFFU {
+  background: var(--obsidian-main-color) !important;
+}
 
 /*
 LIBRARY
