Fix  game settings - launched from game descrip

--- a/Round/shared.css
+++ b/Round/shared.css
@@ -279,7 +279,11 @@ div.basiccontextmenu_contextMenuContents_TBSbv  {
 .basiccontextmenu_contextMenuContents_TBSbv 
   .Play ~ .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(5),
 .basiccontextmenu_contextMenuContents_TBSbv 
-  .Install ~ .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(5) {
+  .Install ~ .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(5),
+.basiccontextmenu_contextMenuContents_TBSbv 
+  .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(5):nth-child(5),
+.basiccontextmenu_contextMenuContents_TBSbv 
+  .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(5):nth-child(4) {
   border-radius: 0px 0px 20px 20px;
 }
 
@@ -288,6 +292,14 @@ div.basiccontextmenu_contextMenuContents_TBSbv  {
   + .basiccontextmenu_contextMenuItem_3PqLg,
 .Install
   ~ .basiccontextmenu_ContextMenuSeparator_zVMb1
-  + .basiccontextmenu_contextMenuItem_3PqLg {
+  + .basiccontextmenu_contextMenuItem_3PqLg,
+.basiccontextmenu_ContextMenuSeparator_zVMb1
+  + .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(3):nth-child(7),
+.basiccontextmenu_ContextMenuSeparator_zVMb1
+  + .basiccontextmenu_contextMenuItem_3PqLg:last-child:nth-child(9),
+.basiccontextmenu_ContextMenuSeparator_zVMb1
+  + .basiccontextmenu_contextMenuItem_3PqLg:nth-last-child(3):nth-child(6),
+.basiccontextmenu_ContextMenuSeparator_zVMb1
+  + .basiccontextmenu_contextMenuItem_3PqLg:last-child:nth-child(8) {
   border-radius: 20px;
 }
