--- a/Round/shared.css
+++ b/Round/shared.css
@@ -315,6 +315,13 @@ div.basiccontextmenu_contextMenuContents_TBSbv {
   border-radius: 0px 0px 20px 20px;
 }
 
+.BasicUI .appactionbutton_Green_3cI5T .appactionbutton_ButtonChild_2AzIX {
+  overflow: hidden;
+}
+.BasicUI .appactionbutton_Green_3cI5T .appactionbutton_ButtonChild_2AzIX.Focusable:focus:focus::after {
+  transform: scaleX(1.1);
+}
+
 /* Activate Product Dialog */
 .activateproductdialog_ProductActivationInfoContainer_1Amz7 {
   border-radius: 20px;
